<resources>
    <string name="app_name">MyBackgroundThread</string>
    <string name="start_task">Start Task</string>
    <string name="status">Status</string>
    <string name="hidden_text">Now you see me!</string>
    <string name="task_completed">Task Completed</string>
    <string name="compressing">Compresssing %d %%</string>
    <string name="btn_to_quote">Quote</string>
    <string name="btn_to_restaurant_review">Restaurant Review</string>
    <string name="btn_to_my_view_model">View Model</string>
    <string name="btn_to_my_live_data">Live Data</string>

    <string name="quote">When do you think people die? When they are shot through the heart by the bullet of a pistol? No. When they are ravaged by an incurable disease? No. When they drink a soup made from a poisonous mushroom!? No! It’s when… they are FORGOTTEN.</string>
    <string name="author">- Dr. Hiluluk</string>
    <string name="show_list_quotes">Show me list of quotes</string>

    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>

    <string name="width">Lebar</string>
    <string name="result">Hasil</string>
    <string name="calculate">Hitung</string>
    <string name="height">Tinggi</string>
    <string name="length">Panjang</string>

    <string name="seconds">%d seconds elapsed</string>
    <string name="hello_dicoding">Hello Dicoding!</string>
</resources>