<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">
        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/start_task" />
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/status" />
        <Button
            android:id="@+id/btn_to_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_to_quote" />
        <Button
            android:id="@+id/btn_to_restaurant_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_to_restaurant_review" />
        <Button
            android:id="@+id/btn_to_my_view_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_to_my_view_model" />
        <Button
            android:id="@+id/btn_to_my_live_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_to_my_live_data" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:text="@string/hidden_text" />
    </LinearLayout>
</ScrollView>